Trying Fix #4 for countdown timer no visible in deployment

--- a/css/style.css
+++ b/css/style.css
@@ -1482,13 +1482,14 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 1rem;
   }
 
-  .timer-wrapper {
+  #intro .intro-wrapper .timer-wrapper {
     flex: 0 1 auto;
-  }
-
-  #about {
     margin-top: 15rem;
   }
+
+  /* #about {
+
+  } */
 
   #about h3 {
     font-size: 1rem;
